Tavaszi Design Frissítés

--- a/emberek.html
+++ b/emberek.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/sötétemberek.css">
+    <link rel="stylesheet" href="css/tavaszemberek.css">
     <title>Emberek</title>
 </head>
 <body>
@@ -23,7 +23,7 @@
                     <a class="navbar" href="galeria.html">Galéria</a>
                 </li>
                 <li class="nav-item">
-                  <a class="navbar" href="emlektabla.html">Emléktábla</a>
+                  <a class="navbar" href="orarend.html">Órarend</a>
                 </li>
             </ul>
         </div>
