--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.0/baguetteBox.min.css">
-    <link rel="stylesheet" href="css/sötétindex.css">
+    <link rel="stylesheet" href="css/tavaszindex.css">
     <title>Főoldal</title>
     
 </head>
@@ -25,7 +25,7 @@
                         <a class="navbar" href="galeria.html">Galéria</a>
                     </li>
                     <li class="nav-item">
-                        <a class="navbar" href="emlektabla.html">Emléktábla</a>
+                        <a class="navbar" href="orarend.html">Órarend</a>
                     </li>
                 </ul>
             </div>
