--- a/orarend.html
+++ b/orarend.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.0/baguetteBox.min.css">
     <link rel="stylesheet" href="css/teliorarend.css">
-    <link rel="stylesheet" href="css/telifotok.css">
+    <link rel="stylesheet" href="css/tavaszorarend.css">
     <title>Órarend</title>
 </head>
 <body>
@@ -48,115 +48,75 @@
             <tbody>
                 <tr>
                     <td>0.</td>
-                    <td>IKT(1.csoport)
-                        <br>
-                        Programozási Alapismeretek(2.csoport)
-                    </td>
                     <td></td>
                     <td>Testnevelés</td>
-                    <td>Ital(1.csoport)</td>
                     <td></td>
+                    <td></td>
+                    <td>Matematika(1.csoport)</td>
                 </tr>
                 <tr>
                     <td>1.</td>
-                    <td>IKT(1.csoport)
-                        <br>
-                        Programozási Alapismeretek(2.csoport)
-                    </td>
-                    <td>Programozási Alapismeretek (1.csoport)</td>
+                    <td>IKT(1.csoport)<br>Programozási Alapismeretek(2.csoport)</td>
                     <td>Testnevelés</td>
-                    <td>Ital(1.csoport)</td>
-                    <td>Ital(2.csoport)</td>
+                    <td>Angol Nyelv(1.csoport)<br>Matematika(2.csoport)</td>
+                    <td>Matematika</td>
+                    <td>Matematika(1.csoport)</td>
                 </tr>
                 <tr>
                     <td>2.</td>
-                    <td>Fizika</td>
-                    <td>
-                            Programozási Alapismeretek(1.csoport)
-                            <br>
-                            IKT(2.csoport)
-                    </td>
-                    <td>Történelem</td>
-                    <td>ITAL(1.csoport)
-                        <br>
-                        Matek(2.csoport)
-                    </td>
-                    <td>
-                            Matematika(1.csoport)
-                            <br>
-                            ITAL(2.csoport)
-                    </td>
+                    <td>IKT(1.csoport)<br>Programozási Alapismeretek(2.csoport)</td>
+                    <td>Magyar Nyelv és Irodalom</td>
+                    <td>Angol Nyelv(1.csoport)<br>Matematika(2.csoport)</td>
+                    <td>Matematika</td>
+                    <td>Pénzügyi</td>
                 </tr>
                 <tr>
                     <td>3.</td>
-                    <td>Matematika(1.csoport)
-                        <br>
-                        IKT(2.csoport)
-                    </td>
-                    <td>
-                            Matematika(1.csoport)
-                            <br>
-                            IKT(2.csoport)
-                    </td>
-                    <td>Irodalom</td>
-                    <td>
-                            Angol nyelv(1.csoport)
-                            <br>
-                            Matematika(2.csoport)
-                    </td>
-                    <td>
-                            Matek(1.csoport)
-                            <br>
-                            ITAL(2.csoport)
-                    </td>
+                    <td>Magyar Nyelv és Irodalom</td>
+                    <td>Matematika(1.csoport)<br>Angol Nyelv(2.csoport)</td>
+                    <td>Testnevelés</td>
+                    <td>Testnevelés</td>
+                    <td>Magyar Nyelv és Irodalom</td>
                 </tr>
                 <tr>
                     <td>4.</td>
-                    <td>Angol nyelv</td>
-                    <td>
-                            Matematika(1.csoport)
-                            <br>
-                            Angol nyelv(2.csoport)
-                    </td>
-                    <td>Angol nyelv</td>
+                    <td>Történelem</td>
                     <td>Fizika</td>
-                    <td>Irodalom</td>
+                    <td>Magyar Nyelv és Irodalom</td>
+                    <td>Osztályfőnöki</td>
+                    <td>Történelem</td>
                 </tr>
                 <tr>
                     <td>5.</td>
-                    <td>Történelem</td>
-                    <td>Testnevelés</td>
-                    <td>ITAL</td>
-                    <td>Irodalom</td>
-                    <td>Testnevelés</td>
+                    <td>Angol Nyelv</td>
+                    <td>Ital II.</td>
+                    <td>Magyar Nyelv és Irodalom</td>
+                    <td>Angol Nyelv</td>
+                    <td>Ital II.(elmélet)</td>
                 </tr>
                 <tr>
                     <td>6.</td>
-                    <td>Irodalom</td>
-                    <td>Pénzügyi ismeretek</td>
+                    <td>Angol Nyelv(1.csoport)</td>
+                    <td>Ital II.</td>
+                    <td>Történelem</td>
+                    <td>Programozási Alapismeretek(1.csoport)<br>Angol Nyelv</td>
                     <td>Matematika(2.csoport)</td>
-                    <td>Angol nyelv</td>
-                    <td>
-                            IKT(1.csoport)
-                            <br>
-                            Matematika(2.csoport)
-                    </td>
                 </tr>
                 <tr>
                     <td>7.</td>
                     <td></td>
-                    <td>Irodalom</td>
-                    <td>Matematika(2.csoport)</td>
-                    <td>Osztályfőnöki</td>
-                    <td>Angol</td>
+                    <td>Ital II.</td>
+                    <td>Fizika</td>
+                    <td>Programozási Alapismeretek(1.csoport)<br>IKT(2.csoport)</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>8.</td>
                     <td></td>
+                    <td>IKT(2.csoport)</td>
+                    <td>Angol Nyelv(2.csoport)</td>
+                    <td>IKT</td>
                     <td></td>
-                    <td></td>
-                    <td></td>
-                    <td>Történelem</td>
                 </tr>
             </tbody>
         </table>
