Tavaszi Design Frissítés

--- a/index.html
+++ b/index.html
@@ -40,14 +40,40 @@
         <br>
         <div class="row">
             <div class="col-md-12 col-12 col-lg-12">
+                <a href="img/index/marcius15.jpg" data-caption="" class="lightbox">
+                    <img src="img/index/marcius15.jpg" class="card-img-top" alt="Március 15.">
+                </a>
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h2 class="card-title">Március 15.</h2>
+                        <p class="card-text">Tisztelegjünk hőseink előtt, akik életüket és bátorságukat adták a magyar szabadságért! Ezen a napon emlékezzünk a forradalom hőseire és azokra az eszmékre, amelyekért küzdöttek.</p>
+                        <p class="card-text">Ezen a napon nagyon sok történelmi esemény történt a Magyar 1848-49 szabadságharc kezdetén kívül. Példáúl ezen a napon gyilkolják meg Cézárt, ez a modern parlamentáris Magyarország megszületésének napja és 1990-től a Magyar sajtó napja is.</p>
+                        <p class="card-text"><small class="datum">Publikálva: 2025.03.15.</small></p>
+                    </div>
+                </div>
+            </div>            
+            <div class="col-md-12 col-12 col-lg-6">
                 <a href="img/index/emlekkep.png" data-caption="Emlékkép a távozókról" class="lightbox">
-                    <img src="img/index/emlekkep.png" class="card-img-top" alt="">
+                    <img src="img/index/emlekkep.png" height="333" class="card-img-top" alt="">
                 </a>
                 <div class="card mb-3">
                     <div class="card-body">
                         <h2 class="card-title">Március 6.</h2>
                         <p class="card-text">2025. Március 6.-a megemlékezés az osztályból eltávozó 4 ember részére.</p>
-                        <p class="card-text">Névszerint: Szabó Gábor Alex,Hegedűs István András, Balázs Botond és Mayer Marcell.</p>
+                        <p class="card-text">Osztályunkból bizonyos belsős indokok miatt 4 diáktársunkat is elküldték. Névszerint Szabó Gábor Alexet,Hegedűs István Andrást, Balázs Botondot és Mayer Marcellt.</p>
+                        <p class="card-text"><small class="datum">Publikálva: 2025.03.06.</small></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-12 col-12 col-lg-6">
+                <a href="img/index/sakkhomolya.jpg" data-caption="" class="lightbox">
+                    <img src="img/index/sakkhomolya.jpg" class="card-img-top" alt="">
+                </a>
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h2 class="card-title">Megyei sakk diákolimpia </h2>
+                        <p class="card-text">Ózdon szervezték meg a megyei sakk diákolimpia csapatbajnokságát, ahol a Kandó csapata harmadik helyezést ért el.</p>
+                        <p class="card-text">Osztályunkat a versenyen <b>Homolya Nándor</b> képviselte. Innen is gratulálunk neki! Ezenkívül a csoport tagjai voltak Kota István, Trézsi Balázs és Záborszki Áron. Felkészítő tanáruk Németh Bence tanárúr volt.</p>
                         <p class="card-text"><small class="datum">Publikálva: 2025.03.06.</small></p>
                     </div>
                 </div>
