--- a/index.html
+++ b/index.html
@@ -39,6 +39,19 @@
         <br>
         <br>
         <div class="row">
+            <div class="col-md-12 col-12 col-lg-6">
+                <a href="img/index/lacirobotika.jpg" data-caption="" class="lightbox">
+                    <img src="img/index/lacirobotika.jpg" class="card-img-top" alt="">
+                </a>
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h2 class="card-title">Robotika Verseny</h2>
+                        <p class="card-text">A Robotex Hungary vonalkövető robotversenyen Budapesten a középiskolás korosztályból a második legjobb idővel jutottak tovább iskolánk tanulói.</p>
+                        <p class="card-text">Osztályunkat a versenyen <b>Szászfai László</b> képviselte. Gratulálunk Laci! Ezenkívül társai voltak Orosz Dávid és Juhász Benedek Péter 9. évfolyamos tanulók.</p>
+                        <p class="card-text"><small class="datum">Publikálva: 2025.03.24.</small></p>
+                    </div>
+                </div>
+            </div> 
             <div class="col-md-12 col-12 col-lg-12">
                 <a href="img/index/marcius15.jpg" data-caption="" class="lightbox">
                     <img src="img/index/marcius15.jpg" class="card-img-top" alt="Március 15.">
