--- a/index.html
+++ b/index.html
@@ -40,6 +40,18 @@
         <br>
         <div class="row">
             <div class="col-md-12 col-12 col-lg-6">
+                <a href="img/index/kandohetkep.jpeg" data-caption="" class="lightbox">
+                    <img src="img/index/kandohetkep.jpeg" height="390" class="card-img-top" alt="">
+                </a>
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h2 class="card-title">Kandóhét</h2>
+                        <p class="card-text">Iskolánk diákjai jövő héten változatos programokon vehetnek részt a Kandóhét keretében. A képen látható táblázatban olvashatók a Kandóhét programjai.</p>
+                        <p class="card-text"><small class="datum">Publikálva: 2025.04.05.</small></p>
+                    </div>
+                </div>
+            </div> 
+            <div class="col-md-12 col-12 col-lg-6">
                 <a href="img/index/lacirobotika.jpg" data-caption="" class="lightbox">
                     <img src="img/index/lacirobotika.jpg" class="card-img-top" alt="">
                 </a>
