--- a/index.html
+++ b/index.html
@@ -40,13 +40,37 @@
         <br>
         <div class="row">
             <div class="col-md-12 col-12 col-lg-6">
+                <a href="img/index/lacirobotikaverseny.png" data-caption="" class="lightbox">
+                    <img src="img/index/lacirobotikaverseny.png" height="363" class="card-img-top" alt="">
+                </a>
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <p class="card-text">A Robotex Hungary vonalkövető robotversenyen Budapesten a középiskolás korosztályból a második legjobb idővel jutottak tovább iskolánk tanulói.</p>
+                        <p class="card-text">Ezzel az eredménnyel kvalifikációt nyertek a tallinni világversenyre, amelyet 2025 decemberében rendeznek meg.</p>
+                        <div id="fullText" style="display: none;">  
+                            <p class="card-text">A Budapesti regionális versenyen nyertünk kvalifikációt az országos döntőre, ahol a kandós robot futotta a legjobb köridőt, kimagasló 20,6 másodperces eredménnyel jutott a délutáni fordulóba, ahol a cél 2 perc alatti folyamatos működés volt. Csapatunk itt is jól teljesített. öt körrel, és a legjobb idővel abszolút győztes lett.</p>
+                            <p class="card-text">Csapat tagjai: </p>
+                            <ul>
+                                <li>Szászfai László</li>
+                                <li>Orosz Dávid</li>
+                                <li>Juhász Benedek</li>
+                            </ul>
+                            <p class="card-text">Felkészítő oktató: Deák Csaba</p>
+                        </div>
+                        <button onclick="toggleText(this)">Több</button>
+                        <p class="card-text"><small class="datum">Publikálva: 2025.04.17.</small></p>
+                    </div>
+                </div>
+            </div> 
+            <div class="col-md-12 col-12 col-lg-6">
                 <a href="img/index/kandohetkep.jpeg" data-caption="" class="lightbox">
                     <img src="img/index/kandohetkep.jpeg" height="390" class="card-img-top" alt="">
                 </a>
                 <div class="card mb-3">
                     <div class="card-body">
                         <h2 class="card-title">Kandóhét</h2>
-                        <p class="card-text">Iskolánk diákjai jövő héten változatos programokon vehetnek részt a Kandóhét keretében. A képen látható táblázatban olvashatók a Kandóhét programjai.</p>
+                        <p class="card-text">Iskolánk diákjai jövő héten változatos programokon vehetnek részt a Kandóhét keretében.</p>
+                        <p class="card-text">A képen látható táblázatban olvashatók a Kandóhét programjai.</p>
                         <p class="card-text"><small class="datum">Publikálva: 2025.04.05.</small></p>
                     </div>
                 </div>
