--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
         <div class="row">
             <div class="col-md-12 col-12 col-lg-6">
                 <a href="img/index/lacirobotikaverseny.png" data-caption="" class="lightbox">
-                    <img src="img/index/lacirobotikaverseny.png" height="363" class="card-img-top" alt="">
+                    <img src="img/index/lacirobotikaverseny.png" height="315" class="card-img-top" alt="">
                 </a>
                 <div class="card mb-3">
                     <div class="card-body">
+                        <h2 class="card-title">Robotika Verseny Eredmény</h2>
                         <p class="card-text">A Robotex Hungary vonalkövető robotversenyen Budapesten a középiskolás korosztályból a második legjobb idővel jutottak tovább iskolánk tanulói.</p>
                         <p class="card-text">Ezzel az eredménnyel kvalifikációt nyertek a tallinni világversenyre, amelyet 2025 decemberében rendeznek meg.</p>
                         <div id="fullText" style="display: none;">  
