--- a/index.html
+++ b/index.html
@@ -40,6 +40,19 @@
         <br>
         <div class="row">
             <div class="col-md-12 col-12 col-lg-6">
+                <a href="img/index/infó.jpg" data-caption="" class="lightbox">
+                    <img src="img/index/infó.jpg" height="390" class="card-img-top" alt="">
+                </a>
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h2 class="card-title">Sportnapi információk</h2>
+                        <p class="card-text">Iskolánk utolsó napján sportnap lessz 8 órától 12 óráig.</p>
+                        <p class="card-text">Az iskolában különböző programok lesznek: 5 fő floorball, 6 fő túra, 6 fő szoborvadászat, 2 fő pingpong</p>
+                        <p class="card-text"><small class="datum">Publikálva: 2025.06.11.</small></p>
+                    </div>
+                </div>
+            </div> 
+            <div class="col-md-12 col-12 col-lg-6">
                 <a href="img/index/lacirobotikaverseny.png" data-caption="" class="lightbox">
                     <img src="img/index/lacirobotikaverseny.png" height="315" class="card-img-top" alt="">
                 </a>
@@ -78,7 +91,7 @@
             </div> 
             <div class="col-md-12 col-12 col-lg-6">
                 <a href="img/index/lacirobotika.jpg" data-caption="" class="lightbox">
-                    <img src="img/index/lacirobotika.jpg" class="card-img-top" alt="">
+                    <img src="img/index/lacirobotika.jpg" height="318"class="card-img-top" alt="">
                 </a>
                 <div class="card mb-3">
                     <div class="card-body">
