--- a/emberek.html
+++ b/emberek.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/tavaszemberek.css">
+    <link rel="stylesheet" href="css/osziemberek.css">
     <title>Emberek</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark ">
     <div class="container">
-        <a class="kiemeles" href="index.html">10.A</a>
+        <a class="kiemeles" href="index.html">11.A</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -101,49 +101,7 @@
             </div>
           </div>
           <!-- 5 -->
-          <div class="carousel-item">
-            <div class="container">
-              <div class="row card">
-                <div class="col-md-6">
-                  <img src="img/emberek/BÁbel.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="col-md-6 card-content">
-                  <h5 class="card-title">Leírás</h5>
-                  <p class="card-text">
-                    Név:Bernát Ábel
-                    <br>
-                    Életkor:16
-                    <br>
-                  </p>
-                  <hr>
-                  <p class="blockquote-footer quote">Idézet</p>
-                  <p class="card-text">""</p>
-                </div>
-              </div>
-            </div>
-          </div>
           <!-- 6 -->
-          <div class="carousel-item">
-            <div class="container">
-              <div class="row card">
-                <div class="col-md-6">
-                  <img src="img/emberek/FarkasMáté.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="col-md-6 card-content">
-                  <h5 class="card-title">Leírás</h5>
-                  <p class="card-text">
-                    Név:Farkas Máté
-                    <br>
-                    Életkor:16
-                    <br>
-                  </p>
-                  <hr>
-                  <p class="blockquote-footer quote">Idézet</p>
-                  <p class="card-text">"Dunka! Dunka!"</p>
-                </div>
-              </div>
-            </div>
-          </div>
           <!-- 7 -->
           <div class="carousel-item">
             <div class="container">
