--- a/regitarsak.html
+++ b/regitarsak.html
@@ -33,8 +33,7 @@
     <br>
     <div id="jobbrabalra" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
-          <!-- 1 -->
-          <!-- 2 -->
+                    <!-- 1 -->
           <div class="carousel-item active">
             <div class="container">
               <div class="row card">
@@ -45,6 +44,28 @@
                   <h5 class="card-title">Leírás</h5>
                   <p class="card-text">
                     Név:Balázs Botond
+                    <br>
+                    Életkor:16
+                    <br>
+                  </p>
+                  <hr>
+                  <p class="blockquote-footer quote">Idézet</p>
+                  <p class="card-text">""</p>
+                </div>
+              </div>
+            </div>
+          </div>
+                    <!-- 2 -->
+          <div class="carousel-item">
+            <div class="container">
+              <div class="row card">
+                <div class="col-md-6">
+                  <img src="img/emberek/BÁbel.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="col-md-6 card-content">
+                  <h5 class="card-title">Leírás</h5>
+                  <p class="card-text">
+                    Név:Bernát Ábel
                     <br>
                     Életkor:16
                     <br>
@@ -74,6 +95,27 @@
                   <hr>
                   <p class="blockquote-footer quote">Idézet</p>
                   <p class="card-text">""</p>
+                </div>
+              </div>
+            </div>
+          </div>
+                    <div class="carousel-item">
+            <div class="container">
+              <div class="row card">
+                <div class="col-md-6">
+                  <img src="img/emberek/FarkasMáté.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="col-md-6 card-content">
+                  <h5 class="card-title">Leírás</h5>
+                  <p class="card-text">
+                    Név:Farkas Máté
+                    <br>
+                    Életkor:16
+                    <br>
+                  </p>
+                  <hr>
+                  <p class="blockquote-footer quote">Idézet</p>
+                  <p class="card-text">"Dunka! Dunka!"</p>
                 </div>
               </div>
             </div>
