--- a/orarend.html
+++ b/orarend.html
@@ -14,7 +14,6 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <h2>ÁTMENETILEG NEM IGAZ INFORMÁCIÓ</h2>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
@@ -49,73 +48,73 @@
                 <tr>
                     <td>0.</td>
                     <td></td>
-                    <td>Testnevelés</td>
                     <td></td>
                     <td></td>
-                    <td>Matematika(1.csoport)</td>
+                    <td>Asztali Alkalmazások(1.csoport)<br>IKT II(2.csoport)</td>
+                    <td>Web Programozás(1.csoport)<br>Adatbázis kezelés(2.csoport)</td>
                 </tr>
                 <tr>
                     <td>1.</td>
-                    <td>IKT(1.csoport)<br>Programozási Alapismeretek(2.csoport)</td>
-                    <td>Testnevelés</td>
-                    <td>Angol Nyelv(1.csoport)<br>Matematika(2.csoport)</td>
-                    <td>Matematika</td>
-                    <td>Matematika(1.csoport)</td>
+                    <td>Magyar Nyelv és Irodalom</td>
+                    <td>Angol Nyelv</td>
+                    <td>Angol Nyelv(1.csoport)</td>
+                    <td>Asztali Alkalmazások(1.csoport)<br>IKT II(2.csoport)</td>
+                    <td>Web Programozás(1.csoport)<br>Adatbázis kezelés(2.csoport)</td>
                 </tr>
                 <tr>
                     <td>2.</td>
-                    <td>IKT(1.csoport)<br>Programozási Alapismeretek(2.csoport)</td>
+                    <td>Angol Nyelv</td>
+                    <td>Angol Nyelv</td>
                     <td>Magyar Nyelv és Irodalom</td>
-                    <td>Angol Nyelv(1.csoport)<br>Matematika(2.csoport)</td>
-                    <td>Matematika</td>
-                    <td>Pénzügyi</td>
+                    <td>Asztali Alkalmazások(1.csoport)<br>IKT II(2.csoport)</td>
+                    <td>Web Programozás(1.csoport)<br>Asztali Alkalmazások(2.csoport)</td>
                 </tr>
                 <tr>
                     <td>3.</td>
+                    <td>Osztályfőnöki</td>
+                    <td>Matematika</td>
                     <td>Magyar Nyelv és Irodalom</td>
-                    <td>Matematika(1.csoport)<br>Angol Nyelv(2.csoport)</td>
-                    <td>Testnevelés</td>
-                    <td>Testnevelés</td>
-                    <td>Magyar Nyelv és Irodalom</td>
+                    <td>IKT II</td>
+                    <td>Adatbázis kezelés(1.csoport)<br>Asztali Alkalmazások(2.csoport)</td>
                 </tr>
                 <tr>
                     <td>4.</td>
-                    <td>Történelem</td>
                     <td>Fizika</td>
-                    <td>Magyar Nyelv és Irodalom</td>
-                    <td>Osztályfőnöki</td>
+                    <td>Testnevelés</td>
                     <td>Történelem</td>
-                </tr>
+                    <td>IKT II(1.csoport)<br>Web Programozás(2.csoport)</td>
+                    <td>Adatbázis kezelés(1.csoport)<br>Asztali Alkalmazások(2.csoport)</td>
+                </tr>   
                 <tr>
                     <td>5.</td>
-                    <td>Angol Nyelv</td>
-                    <td>Ital II.</td>
+                    <td>Matematika</td>
                     <td>Magyar Nyelv és Irodalom</td>
-                    <td>Angol Nyelv</td>
-                    <td>Ital II.(elmélet)</td>
+                    <td>Fizika</td>
+                    <td>IKT II(1.csoport)<br>Web Programozás(2.csoport)</td>
+                    <td>Szakmai Angol</td>
                 </tr>
                 <tr>
                     <td>6.</td>
-                    <td>Angol Nyelv(1.csoport)</td>
-                    <td>Ital II.</td>
+                    <td>Matematika</td>
                     <td>Történelem</td>
-                    <td>Programozási Alapismeretek(1.csoport)<br>Angol Nyelv</td>
-                    <td>Matematika(2.csoport)</td>
+                    <td>Matematika</td>
+                    <td>IKT II(1.csoport)<br>Web Programozás(2.csoport)</td>
+                    <td>Szakmai Angol</td>
                 </tr>
                 <tr>
                     <td>7.</td>
+                    <td>Testnevelés</td>
                     <td></td>
-                    <td>Ital II.</td>
-                    <td>Fizika</td>
-                    <td>Programozási Alapismeretek(1.csoport)<br>IKT(2.csoport)</td>
+                    <td>Angol Nyelv(2.csoport)</td>
+                    <td></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td>8.</td>
+                    <td>Testnevelés</td>
                     <td></td>
-                    <td>IKT(2.csoport)</td>
-                    <td>Angol Nyelv(2.csoport)</td>
-                    <td>IKT</td>
+                    <td></td>
+                    <td></td>
                     <td></td>
                 </tr>
             </tbody>
